--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "Michiel van Roon",
   "license": "MIT",
   "devDependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.2",
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
@@ -27,11 +26,12 @@
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.2",
     "axios": "^0.21.1"
   },
   "dependencies": {
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "react-native-device-info": "^8.4.8",
+    "react-native-keychain": "^8.0.0"
   },
   "scripts": {
     "build": "tsc",
